@@ -71,6 +71,14 @@ authenticate();
 // Note that we don't perform autorization here, so each 1st level page
 // has to do it in its way, e.g. to call authorize().
 
+$configCache = loadConfigCache();
+if (!count ($configCache))
+{
+	showError ('Failed to load configuration from the database.');
+	die();
+}
+
+
 $remote_username = $_SERVER['PHP_AUTH_USER'];
 $pageno = (isset ($_REQUEST['page'])) ? $_REQUEST['page'] : 'index';
 $tabno = (isset ($_REQUEST['tab'])) ? $_REQUEST['tab'] : 'default';
